# ingritofood-backend

./: CMakeLists.txt  README.md  getRecipeByIngri.cpp  get_receipe_by_id.h  get_receipe_by_ingri.h  http_tcpServer.cpp  http_tcpserver.h  server.cpp
.github/workflows/: codeql.yml
